Deployment/filmIntegrationapi/04-filmapi-deployment-local.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: film-integration
  labels:
    app: film-integration
    service: film-integration
spec:
  replicas: 1
  selector:
    matchLabels:
      service: film-integration
  template:
    metadata:
      labels:
        app: film-integration
        service: film-integration
        com.docker.project: film-integration
    spec:
      containers:
        - name: film-integration
          image: akspocacr007.azurecr.io/film.integration.api:release
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
          livenessProbe:
            httpGet:
              port: 80
              path: /liveness
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              port: 80
              path: /hc
            initialDelaySeconds: 90
            periodSeconds: 60
            timeoutSeconds: 5
      imagePullSecrets:
        - name: regcredacr
