Deployment/filmIntegrationapi/03-filmapi-service-azure.yaml
apiVersion: v1
kind: Service
metadata:
  name: film-integration
  labels:
    app: film-integration
    service: film-integration
spec:
  ports:
    - port: 80
      protocol: TCP
      name: http
      targetPort: 80
  type: LoadBalancer
  selector:
    service: film-integration
